Create First section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- header  -->
     <header>
-      <div class="header">
+      <div class="header container">
         <div class="logo">
             <a href="./index.html"><img src="./assets/header logo.png" alt=""></a>
         </div>
@@ -24,8 +24,22 @@
         </div>
       </div>
     </header>
+
+
+    <section class="intro-section">
+        <div class="intro container">
+            <h1>WELCOME TO BON HOTEL</h1>
+            <p>Good people. Good thinking. Good feeling.</p>
+            <a href="#">EXPLORE</a>
+        </div>
+    </section>
        
 
+
+
+    <footer>
+
+    </footer>
 
   </body>
 </html>
