--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
 
     <footer>
-
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti laboriosam ullam doloribus illum voluptatibus commodi quidem, cum dolores maiores ea facilis quasi, repellat consectetur nesciunt explicabo quo rem, blanditiis magnam.
+      </p>
     </footer>
 
   </body>
